--- a/Mi primera aplicación web MVC/Mi primera aplicación web MVC.csproj
+++ b/Mi primera aplicación web MVC/Mi primera aplicación web MVC.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>Mi_primera_aplicación_web_MVC</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
+  </ItemGroup>
+
 </Project>
